# llmplayground

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  ProjectOptions.cmake  README.md
cmake/: CompilerWarnings.cmake
include/common/: m_defs.h  m_gguf.h  m_misc.h  m_model.h  m_model_loader.h  m_model_loader_gguf.h  m_token.h  m_vocab.h
notebooks/: getting_to_know_Llama.ipynb  getting_to_know_Llama_mac.ipynb  kickoff_llamacpp.ipynb  prompt_Engineering_with_Llama_2.ipynb  summarize_llama3.ipynb  summarizer.ipynb
src/: CMakeLists.txt
src/common/: CMakeLists.txt  m_defs.cpp  m_misc.cpp  m_model.cpp  m_model_loader.cpp  m_model_loader.h  m_model_loader_gguf.cpp  m_vocab.cpp  unicode.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/inference/: CMakeLists.txt  m_batch.cpp  m_batch.h  m_inference.cpp  m_inference.h
src/sample_library/: CMakeLists.txt
src/tokenizer/: CMakeLists.txt  m_tokenizer.cpp  m_tokenizer.h  m_tokenizer_bpe.cpp  m_tokenizer_bpe.h  m_tokenizer_spm.cpp  m_tokenizer_spm.h  m_vocab.cpp
test/: CMakeLists.txt  inference_tests.cpp  tests.cpp  tokenizer_tests.cpp
tokenizer/common/: defs.h
tokenizer/src/: m_tokenizer.h
